--- a/index.html
+++ b/index.html
@@ -33,10 +33,6 @@
             </h2>
             <div class="pt-2">
               <div class="mb-3">
-                <label for="createName" class="form-label">Название комнаты</label>
-                <input type="email" class="form-control" id="createName" placeholder="Она и я...">
-              </div>
-              <div class="mb-3">
                 <label for="min" class="form-label">Минимальное число</label>
                 <input type="number" class="form-control" id="min" value="0" min="0">
               </div>
@@ -47,6 +43,18 @@
               <div class="text-end">
                 <button class="btn  btn-dark">Создать новую игру</button>
               </div>
+            </div>
+          </div>
+        </div>
+        
+        <div class="card mb-5">
+          <div class="card-body">
+            <h2 class="card-title  text-center">
+              Игра создана
+            </h2>
+            <div class="pt-2 text-center">
+              Ожидаем игрока...<br/>
+              ID комнаты: <b>342</b>
             </div>
           </div>
         </div>
