--- a/index.html
+++ b/index.html
@@ -12,71 +12,77 @@
   <div class="container py-3">
     <div class="row  justify-content-center">
       <div class="col-md-6">
-        <div class="card mb-5">
+
+        <div class="card mb-5" style="display: none;" data-card="select-type">
           <div class="card-body">
             <h2 class="card-title  text-center">
               Отгадай число
             </h2>
             <div class="pt-2">
               <div class="d-grid gap-2 col-6 mx-auto">
-                <button class="btn btn-dark" type="button">Создать игру</button>
-                <button class="btn btn-dark" type="button">Подключиться к игре</button>
+                <button class="btn btn-dark" data-onclick="to-create-card" type="button">Создать игру</button>
+                <button class="btn btn-dark" data-onclick="to-connect-card" type="button">Подключиться к игре</button>
               </div>
             </div>
           </div>
         </div>
         
-        <div class="card mb-5">
+        <div class="card mb-5" style="display: none;" data-card="create">
           <div class="card-body">
             <h2 class="card-title  text-center">
               Создать игру
             </h2>
             <div class="pt-2">
               <div class="mb-3">
-                <label for="min" class="form-label">Минимальное число</label>
-                <input type="number" class="form-control" id="min" value="0" min="0">
+                <label for="create-min" class="form-label">Минимальное число</label>
+                <input type="number" class="form-control" id="create-min" value="0">
               </div>
               <div class="mb-3">
-                <label for="max" class="form-label">Максимальное число</label>
-                <input type="number" class="form-control" id="max" value="100" min="50">
+                <label for="create-max" class="form-label">Максимальное число</label>
+                <input type="number" class="form-control" id="create-max" value="100">
               </div>
-              <div class="text-end">
-                <button class="btn  btn-dark">Создать новую игру</button>
+              <div class="d-flex justify-content-between">
+                <button class="btn  btn-link" data-onclick="to-select-type-card">Назад</button>
+                <button class="btn  btn-dark" data-onclick="create">Создать новую игру</button>
               </div>
             </div>
           </div>
         </div>
         
-        <div class="card mb-5">
+        <div class="card mb-5" style="display: none;" data-card="waiting-for">
           <div class="card-body">
             <h2 class="card-title  text-center">
               Игра создана
             </h2>
             <div class="pt-2 text-center">
               Ожидаем игрока...<br/>
-              ID комнаты: <b>342</b>
+              ID комнаты: <b id="waiting-for-id">342</b>
             </div>
           </div>
         </div>
 
-        <div class="card mb-5">
+        <div class="card mb-5" style="display: none;" data-card="connect">
           <div class="card-body">
             <h2 class="card-title  text-center">
               Подключиться к игре
             </h2>
             <div class="pt-2">
               <div class="mb-3">
-                <label for="createName" class="form-label">ID комнаты</label>
-                <input type="email" class="form-control" id="createName" placeholder="227">
+                <label for="roomID" class="form-label">ID комнаты</label>
+                <input type="number" class="form-control" id="roomID" placeholder="227">
+                <div class="invalid-feedback" id="connect-wrong-id-msg" style="display: none;">
+                  Неверный ID
+                </div>
               </div>
-              <div class="text-end">
-                <button class="btn  btn-dark">Подключиться к игре</button>
+              <div class="d-flex justify-content-between">
+                <button class="btn  btn-link" data-onclick="to-select-type-card">Назад</button>
+                <button class="btn  btn-dark" data-onclick="connect">Подключиться к игре</button>
               </div>
             </div>
           </div>
         </div>
 
-        <div class="card mb-5">
+        <div class="card mb-5" style="display: none;" data-card="enemy-is-guessing">
           <div class="card-body">
             <h2 class="card-title  text-center">
               Противник загадывает число, ждите...
@@ -84,7 +90,7 @@
           </div>
         </div>
 
-        <div class="card mb-5">
+        <div class="card mb-5" style="display: none;" data-card="player-is-guessing">
           <div class="card-body">
             <h2 class="card-title  text-center">
               Отгадайте число противника
@@ -92,9 +98,9 @@
             <div class="pt-2">
               <div class="mb-3">
                 <label for="guessNumber" class="form-label">Предполагаемое число</label>
-                <input type="number" class="form-control" id="guessNumber" value="100" min="0" max="100">
+                <input type="number" class="form-control" id="player-is-guessing-number" min="0" max="100">
                 <div class="pt-1">
-                  Всего попыток: <b>13</b>
+                  Всего попыток: <b id="player-is-guessing-count">13</b>
                 </div>
               </div>
               <div class="text-end">
@@ -104,7 +110,7 @@
           </div>
         </div>
 
-        <div class="card mb-5">
+        <div class="card mb-5" style="display: none;" data-card="finish">
           <div class="card-body">
             <h2 class="card-title  text-center">
               Ура! Вы отгадали!
@@ -120,7 +126,7 @@
           </div>
         </div>
 
-        <div class="card mb-5">
+        <div class="card mb-5" style="display: none;" data-card="guess-for-enemy">
           <div class="card-body">
             <h2 class="card-title  text-center">
               Загадай число для противника
@@ -128,21 +134,21 @@
             <div class="pt-2">
               <div class="mb-3">
                 <label for="guessNumber" class="form-label">Загадываемое число</label>
-                <input type="number" class="form-control" id="guessNumber" value="100" min="0" max="100">
+                <input type="number" class="form-control" id="guess-for-enemy-number" min="0" max="100">
               </div>
               <div class="text-end">
-                <button class="btn  btn-dark">Загадать!</button>
+                <button class="btn  btn-dark" data-onclick="guess-for-enemy">Загадать!</button>
               </div>
             </div>
           </div>
         </div>
 
-        <div class="card mb-5">
+        <div class="card mb-5" style="display: none;" data-card="stats">
           <div class="card-body">
             <h2 class="card-title  text-center">
               Статистика противника
             </h2>
-            <div class="pt-2">
+            <div class="pt-2" id="stats-list">
               <div class="alert alert-danger">
                 Противник ввёл число <b>47</b>
               </div>
@@ -160,5 +166,7 @@
     </div>
   </div>
 
+  <script src="/socket.io/socket.io.js"></script>
+  <script src="js/app.js"></script>
 </body>
 </html>
